tdf#90338 tdf#84254 DrawingML export fix

Change-Id: I610d8099f057a2a34a1f9573d8ac16b5b8da9fc7
Reviewed-on: https://gerrit.libreoffice.org/15918
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 481c185e327cb83ffcb29657d5a354eae2c4a5f3)