sd/qa/unit/import-tests.cxx
@@ -192,6 +192,7 @@ void SdImportTest::testDocumentLayout()
         { "fdo71434.pptx", "xml/fdo71434_", PPTX, -1 },
         { "n902652.pptx", "xml/n902652_", PPTX, -1 },
         { "tdf90403.pptx", "xml/tdf90403_", PPTX, -1 },
+        { "tdf90338.odp", "xml/tdf90338_", ODP, PPTX },
         // { "pptx/n828390.pptx", "pptx/xml/n828390_", PPTX, PPTX }, // Example
     };
 
